Fix: Background image overflow on hero page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,9 +166,15 @@ html {
 
 /* layout of page  */
 .wrapper {
-    position: relative;
-    overflow: hidden;
-    z-index: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .wrapper::after {
@@ -180,14 +186,12 @@ html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
     z-index: -1;
-    pointer-events: none;
 }
 
 .hero-container {
     width: 100%;
-    height: 100dvh;
+    min-height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -882,6 +886,7 @@ select:focus {
 }
 
 @media (max-width: 768px) {
+
     .menu {
         display: flex;
         flex-direction: column;
